Updated '_data/slider.yml' via CloudCannon

--- a/_data/slider.yml
+++ b/_data/slider.yml
@@ -1,10 +1,10 @@
 images:
-  - slider_image:
+  - slider_image: /uploads/slider/slider-1.jpg
     title: Lorem ipsum
     sub_title: Footprints Preschool
-  - slider_image:
+  - slider_image: /uploads/slider/slider-2.jpg
     title: Lorem ipsum
     sub_title: Footprints Preschool
-  - slider_image:
+  - slider_image: /uploads/slider/slider-3.jpg
     title: Lorem ipsum
     sub_title: Footprints Preschool
