Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
   - name: About
     link: /about/
     pages_collection:
-  - name: Whanau
+  - name: Whanau Info
     link: /whanau/
     pages_collection:
   - name: Fees
