Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ links:
   - name: Whanau Info
     link: /whanau/
     pages_collection:
+  - name: Nature
+    link: /nature/
+    pages_collection:
   - name: Fees
     link: /fees/
     pages_collection:
