--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,6 +1,8 @@
-address_description:
+address_description: |-
+  22 Amaranth Street
+  Waihi 3690
 email:
-phone:
+phone: 07-863 8150
 youtube_url:
-facebook_url:
+facebook_url: 'https://www.facebook.com/Footprints-Preschool-240172169496852/'
 twitter_url:
