Updated '_data/slider.yml' via CloudCannon

--- a/_data/slider.yml
+++ b/_data/slider.yml
@@ -1,13 +1,10 @@
 slides:
   - image: /uploads/slider/slider-three-kids.jpg
-    title: Slide ONE
-    sub_title: Goldfields Railway
-    blurb: 'Ut enim ad minim veniam, quis nostrud exercitation.'
+    title: Learning impressions, lasting for life.
+    sub_title: Footprints Preschool, Waihi
   - image: /uploads/slider/slider-beach-pirates.jpg
-    title: Slide TWO
-    sub_title: Goldfields Railway
-    blurb: 'Ut enim ad minim veniam, quis nostrud exercitation.'
+    title:  Learning impressions, lasting for life.
+    sub_title: Footprints Preschool, Waihi
   - image: /uploads/slider/slider-peace-sign.jpg
-    title: Slide THREE
-    sub_title: Goldfields Railway
-    blurb: 'Ut enim ad minim veniam, quis nostrud exercitation.'
+    title: Learning impressions, lasting for life.
+    sub_title: Footprints Preschool, Waihi
