Updated '_data/contact.yml' via CloudCannon

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,6 +1,7 @@
 address_description: |-
   22 Amaranth Street
   Waihi 3690
+  (Some maps still show Amaranth as Union Street)
 phone: 07-863 8150
 youtube_url:
 facebook_url: 'https://www.facebook.com/Footprints-Preschool-240172169496852/'
