Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ links:
   - name: Nature
     link: /nature/
     pages_collection:
-  - name: Whanau Info
+  - name: Whanāu Info
     link: /whanau/
     pages_collection:
   - name: Fees
