Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Footprints Preschool
-url: 'https://www.footprintspreschool.co.nz'
+url: 'https://www.footprintspreschool.nz'
 baseurl:
 
 url_dev: 'https://haloed-bear.cloudvent.net'
