Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,3 +8,11 @@ slides:
   - image: /uploads/slider/slider-peace-sign.jpg
     title: Learning impressions, lasting for life.
     sub_title: Footprints Preschool, Waihi
+address_description: |-
+  22 Amaranth Street
+  Waihi 3690
+  (Some maps still show Amaranth as Union Street)
+phone: 027 295 2658
+youtube_url:
+facebook_url: 'https://www.facebook.com/Footprints-Preschool-240172169496852/'
+twitter_url:
