--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,13 +1,13 @@
 slides:
   - image: /uploads/slider/slider-three-kids.jpg
-    title: Learning impressions, lasting for life.
-    sub_title: Footprints Preschool, Waihi
+    title: 'Learning impressions, lasting for life.'
+    sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/slider/slider-beach-pirates.jpg
-    title:  Learning impressions, lasting for life.
-    sub_title: Footprints Preschool, Waihi
+    title: Getting out into Nature
+    sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/slider/slider-peace-sign.jpg
-    title: Learning impressions, lasting for life.
-    sub_title: Footprints Preschool, Waihi
+    title: 'Learning impressions, lasting for life.'
+    sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
   Waihi 3690
