Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ slides:
     title: Getting out into Nature
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/slider/slider-peace-sign.jpg
-    title: 'Learning impressions, lasting for life.'
+    title: 30 hours free childcare
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
