Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,11 +2,11 @@ slides:
   - image: /uploads/slider/slider-three-kids.jpg
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/slider/slider-beach-pirates.jpg
-    title: Getting out into Nature
-    sub_title: 'Footprints Preschool, Waihi'
+  - image:
+    title:
+    sub_title:
   - image: /uploads/slider/slider-peace-sign.jpg
-    title: 30 hours free childcare
+    title: 30 hours free childcare 3-4 yr olds
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
