Updated 2 files via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,8 +2,8 @@ slides:
   - image: /uploads/slider/slider-three-kids.jpg
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image:
-    title:
+  - image: /uploads/img-5590.JPG
+    title: Exploration and Imagination
     sub_title:
   - image: /uploads/slider/slider-peace-sign.jpg
     title: 30 hours free childcare 3-4 yr olds
