Updated 7 files via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,12 +1,24 @@
 slides:
-  - image: /uploads/slider/slider-three-kids.jpg
+  - image: /uploads/view-to-back.JPG
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/img-5590.JPG
+  - image: /uploads/mud-kitchen-cropped.JPG
     title: Exploration and Imagination
-    sub_title:
-  - image: /uploads/slider/slider-peace-sign.jpg
+    sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/slide.JPG
+    title: Large Outdoor Play Area
+    sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/under-2-room.JPG
+    title: Home away from home
+    sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/gallery/phils-iphone-1177.jpg
+    title: Reconnecting with Nature
+    sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/over-2-room.JPG
     title: 30 hours free childcare 3-4 yr olds
+    sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/unders-sandpit.JPG
+    title: $1 hour childcare for 0-2 year olds
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
