Updated 3 files via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,11 +8,11 @@ slides:
   - image: /uploads/slide.JPG
     title: Large Outdoor Play Area
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/under-2-room.JPG
-    title: Home away from home
+  - image: /uploads/water-and-sand.JPG
+    title: Learning through Free Play
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/gallery/phils-iphone-1177.jpg
-    title: Reconnecting with Nature
+  - image: /uploads/under-2-room-1.JPG
+    title: Home away from home
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/over-2-room.JPG
     title: 30 hours free childcare 3-4 yr olds
@@ -26,5 +26,5 @@ address_description: |-
   (Some maps still show Amaranth as Union Street)
 phone: 027 295 2658
 youtube_url:
-facebook_url: 'https://www.facebook.com/Footprints-Preschool-240172169496852/'
+facebook_url:
 twitter_url:
