--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,13 +3,13 @@ slides:
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/mud-kitchen-cropped.JPG
-    title: Exploration and Imagination
+    title: Exploration and imagination
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/slide.JPG
-    title: Large Outdoor Play Area
+    title: Large outdoor play area
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/water-and-sand.JPG
-    title: Learning through Free Play
+    title: Learning through free play
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/under-2-room-1.JPG
     title: Home away from home
