--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,23 +2,20 @@ slides:
   - image: /uploads/view-to-back.JPG
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/mud-kitchen-cropped.JPG
-    title: Exploration and imagination
+  - image: /uploads/over-2-room.JPG
+    title: Nurturing relationships give rise to
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/slide.JPG
-    title: Large outdoor play area
+  - image: /uploads/mud-kitchen-cropped.JPG
+    title: Explorative and imaginative
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/water-and-sand.JPG
-    title: Learning through free play
+    title: Play
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/under-2-room-1.JPG
-    title: Home away from home
-    sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/over-2-room.JPG
-    title: 30 hours free childcare 3-4 yr olds
+    title: In a home away from home
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/unders-sandpit.JPG
-    title: $1 hour childcare for 0-2 year olds
+    title: Where we teach from the heart.
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
