Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,19 +3,19 @@ slides:
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/over-2-room.JPG
-    title: Nurturing relationships give rise to
+    title: 'Building relationships, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/mud-kitchen-cropped.JPG
-    title: Explorative and imaginative
+    title: 'Confidence grows, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/water-and-sand.JPG
-    title: Play
+    title: 'Play abounds, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/under-2-room-1.JPG
-    title: In a home away from home
+    title: 'You feel at home, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/unders-sandpit.JPG
-    title: Where we teach from the heart.
+    title: The world is yours.
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
   22 Amaranth Street
