--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,6 +17,9 @@ slides:
   - image: /uploads/unders-sandpit.JPG
     title: The world is yours.
     sub_title: 'Footprints Preschool, Waihi'
+  - image: /uploads/enrol-now-1.jpg
+    title:
+    sub_title:
 address_description: |-
   22 Amaranth Street
   Waihi 3690
