Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,6 +20,9 @@ slides:
   - image: /uploads/unders-sandpit.JPG
     title: The world is yours.
     sub_title: 'Footprints Preschool, Waihi'
+  - image:
+    title:
+    sub_title:
 address_description: |-
   22 Amaranth Street
   Waihi 3690
