Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,20 +1,20 @@
 slides:
-  - image: /uploads/view-to-back.JPG
+  - image: /uploads/view-to-back.jpg
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/over-2-room.JPG
+  - image: /uploads/over-2-room.jpg
     title: 'Building relationships, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/mud-kitchen-cropped.JPG
+  - image: /uploads/mud-kitchen-cropped.jpg
     title: 'Confidence grows, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/water-and-sand.JPG
+  - image: /uploads/water-and-sand.jpg
     title: 'Play abounds, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/under-2-room-1.JPG
+  - image: /uploads/under-2-room-1.jpg
     title: 'You feel at home, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/unders-sandpit.JPG
+  - image: /uploads/unders-sandpit.jpg
     title: The world is yours.
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
