Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ slides:
   - image: /uploads/slider/view-to-back-resized.jpg
     title: 'Learning impressions, lasting for life.'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/over-2-room.jpg
+  - image: /uploads/slider/over-2-room-resized.jpg
     title: 'Building relationships, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/mud-kitchen-cropped.jpg
