Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ slides:
   - image: /uploads/slider/mud-kitchen-cropped-resized.jpg
     title: 'Confidence grows, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/water-and-sand.jpg
+  - image: /uploads/slider/water-and-sand-resized.jpg
     title: 'Play abounds, so...'
     sub_title: 'Footprints Preschool, Waihi'
   - image: /uploads/under-2-room-1.jpg
