--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,10 +11,10 @@ slides:
   - image: /uploads/slider/water-and-sand-resized.jpg
     title: 'Play abounds, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/under-2-room-1.jpg
+  - image: /uploads/slider/under-2-room-1-resized.jpg
     title: 'You feel at home, so...'
     sub_title: 'Footprints Preschool, Waihi'
-  - image: /uploads/unders-sandpit.jpg
+  - image: /uploads/slider/unders-sandpit-resized.jpg
     title: The world is yours.
     sub_title: 'Footprints Preschool, Waihi'
 address_description: |-
